<resources>
    <string name="app_name">Ihadream</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1079712192174757</string>
    <string name="cancel_login">Problema na Conexão</string>
    <string name="criar_login">Não tem uma conta?</string>
    <string name="clique">Cadastre-se</string>
    <string name="outros">Outros Acessos Via :</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Este endereço de e-mail é inválido</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_incorrect_password">Esta senha está incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_name">Nome</string>
    <string name="title_activity_desejos">DesejosActivity</string>
    <string name="error_registro">Erro!</string>
    <string name="msg_progress">Aguarde...</string>
    <string name="sair">Sair</string>
</resources>
