<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"



    android:weightSum="1">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp">

        <TextView
            android:textColor="#EB7B2D"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:text="IhaDream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" />

        <EditText
            android:text="Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText2" />

        <EditText
            android:text="Senha"
            android:textColorHighlight="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText" />

        <Button
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:background="#EB7B2D"
            android:text="logar Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2" />





        <View
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="#EB7B2D"
            android:layout_width="match_parent"
            android:layout_height="2dp"></View>
        <TextView
            android:textColor="#EB7B2D"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/outros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:padding="30dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:weightSum="1">
           
            <com.facebook.login.widget.LoginButton
                android:padding="202dp"
                android:id="@+id/login_button"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="Login Facebook"
                android:layout_weight="0.43" />
        </LinearLayout>
        <TextView
            android:textColor="#EB7B2D"
            android:textAlignment="center"
            android:text="@string/criar_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" />
        <TextView
            android:onClick=""
            android:textColor="#2c3ca7"
            android:textAlignment="center"
            android:text="@string/clique"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clique" />






    </LinearLayout>
</ScrollView>



</RelativeLayout>